# LLM-Tuning-TCM

./: .env.example  .gitignore  README.md  agent_system_prompt.md  archive_old_data.py  promptfooconfig.yaml  pyproject.toml  requirements.txt  retrieve_results.py  tests.yaml  tuning_app.py  tuning_workflow_async.py  tuning_workflow_batch.py  tuning_workflow_colab.ipynb  tuning_workflow_sync.py
archive/: README.md  best_parameter_report.md  list_models.py  tuning_results.csv  tuning_results.md  tuning_workflow.py
archive/assets/config/: registry.default.yaml
archive/assets/prompts/: system.default.md
archive/experiment_data/EXP01/: run_1.txt  run_2.txt  run_3.txt
archive/experiment_data/EXP02/: run_1.txt  run_2.txt  run_3.txt
archive/experiment_data/EXP03/: run_1.txt  run_2.txt  run_3.txt
archive/tests/ai/: test_detection.py  test_inference.py  test_preprocessing.py  test_pytorch_session.py  test_registry.py  test_task_head.py  test_training_dataset.py  test_types.py  test_weights.py
archive/tests/backend/: test_llm_client.py  test_llm_store.py  test_paths.py  test_pipeline.py  test_predictions.py  test_prompt_store.py  test_prompt_template.py  test_registry_store.py  test_route_analyze.py  test_route_api_key.py  test_route_config.py  test_secrets_store.py  test_settings.py
archive/tests/frontend/: test_analyze_view.py  test_api.py  (+1 more)
assets/: README.md  ground_truth.json
assets/prompts/: system.default.md  system_prompt.md
config/: llm.current.yaml  registry.current.yaml  registry.default.yaml
prompts/: system_prompt_layman.md  system_prompt_professional.md  醫生提示詞參考.txt
remote_repo_temp/: .gitignore
reports/: 20260515_experiment_report.md
src/ai/: __init__.py  detection.py  inference.py  preprocessing.py  pytorch_session.py  registry.py  task_head.py  types.py  weights.py
src/backend/: __init__.py  app.py  models.py  pipeline.py  settings.py
src/frontend/: __init__.py  api.py  app.py  models.py  settings.py
(+27 files in other folders)
