[project]
name = "tongue-diagnosis"
version = "0.1.0"
description = "Realtime tongue diagnosis: detection, recognition, classification, FastAPI backend, Gradio frontend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic-settings>=2",
    "pyyaml>=6",
]

[project.optional-dependencies]
ai = [
    "torch>=2.2",
    "torchvision>=0.17",
    "opencv-python>=4.9",
    "onnxruntime>=1.17",
    "monai>=1.3",
    "huggingface-hub>=0.20",
    "numpy>=1.26",
    "pandas>=2.1",
]
backend = [
    "tongue-diagnosis[ai]",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-multipart>=0.0.9",
    "google-genai>=1.0",
]
frontend = [
    "gradio>=4",
    "httpx>=0.27",
]
training = [
    "tongue-diagnosis[ai]",
    "scikit-learn>=1.4",
    "matplotlib>=3.8",
    "label-studio-sdk>=1.0",
]
dev = ["pytest>=8", "respx>=0.21"]

[project.scripts]
tongue-backend = "backend.app:run"
tongue-frontend = "frontend.app:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ai", "src/backend", "src/frontend"]

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
pythonpath = ["src"]

[tool.pyrefly]
project-includes = [
    "**/*.py*",
    "**/*.ipynb",
]
