[project]
name = "tongue-diagnosis-tuning"
version = "0.1.0"
description = "Async TCM Tongue Diagnosis LLM Parameter Tuning Framework with Ground Truth Evaluation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.0",
    "gradio>=6.14.0",
    "pandas>=2.1",
    "python-dotenv>=1.0",
    "tenacity>=9.0.0",
]

[tool.uv]
dev-dependencies = []
